--- a/notebooks/c1.1-data-description.ipynb
+++ b/notebooks/c1.1-data-description.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,16 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_raw = pd.read_csv('../data/df_ready.csv')"
+    "df_raw = pd.read_csv('../data/01_raw/df_ready.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "4  September   14           37  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
        "6 -0.266980  -0.648027  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +624,7 @@
     "d1 = pd.DataFrame(num_attributes.apply(np.std) ).T # Desvio padrão\n",
     "d2 = pd.DataFrame(num_attributes.apply(min) ).T # valor mínimo\n",
     "d3 = pd.DataFrame(num_attributes.apply(max) ).T # valor máximo\n",
-    "d4 = pd.DataFrame(num_attributes.apply( lambda x: x.max() - x.min())).T # Variação entre o mínimo e máxilo valor\n",
+    "d4 = pd.DataFrame(num_attributes.apply( lambda x: x.max() - x.min())).T # Variação entre o mínimo e máximo valor\n",
     "d5 = pd.DataFrame(num_attributes.apply( lambda x: x.skew())).T #skewness\n",
     "d6 = pd.DataFrame(num_attributes.apply( lambda x : x.kurtosis())).T # kurtosis\n",
     "\n",
@@ -678,7 +678,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
